--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "angular.suggest.includeCompletionsWithSnippetText": false,
-    "angular.enable-strict-mode-prompt": false
+    "angular.suggest.includeCompletionsWithSnippetText": false
 }
