--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.2.2",
-    "@angular/cdk": "^12.2.13",
+    "@angular/cdk": "^13.2.2",
     "@angular/common": "~13.2.2",
     "@angular/compiler": "~13.2.2",
     "@angular/core": "~13.2.2",
@@ -20,9 +20,11 @@
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
+    "@tafalk/material-color-generator": "^1.0.12",
+    "chart.js": "^3.7.0",
     "primeflex": "^3.1.2",
     "primeicons": "^5.0.0",
-    "primeng": "^12.2.3",
+    "primeng": "^13.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.17.4",
