--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
+    "@ctrl/ngx-codemirror": "^5.1.1",
     "@tafalk/material-color-generator": "^1.0.12",
     "chart.js": "^3.7.0",
+    "codemirror": "^5.65.1",
     "primeflex": "^3.1.2",
     "primeicons": "^5.0.0",
     "primeng": "^13.1.1",
