--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tafalk/material-color-generator": "^1.0.12",
     "chart.js": "^3.7.0",
     "codemirror": "^5.65.1",
+    "guid-typescript": "^1.0.9",
     "primeflex": "^3.1.2",
     "primeicons": "^5.0.0",
     "primeng": "^13.1.1",
