--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "calification-app",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
+    "ng": "nx",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "node ./decorate-angular-cli.js"
   },
   "private": true,
   "dependencies": {
@@ -22,24 +23,27 @@
     "@angular/platform-browser-dynamic": "~13.3.11",
     "@angular/router": "~13.3.11",
     "@ctrl/ngx-codemirror": "^5.1.1",
+    "@nrwl/angular": "14.1.10",
     "@tafalk/material-color-generator": "^1.0.12",
     "chart.js": "^3.7.0",
     "codemirror": "^5.65.1",
+    "firebase": "^9.4.0",
     "guid-typescript": "^1.0.9",
     "primeflex": "^3.1.2",
     "primeicons": "^5.0.0",
     "primeng": "^13.1.1",
+    "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.17.4",
-    "zone.js": "~0.11.4",
-    "firebase": "^9.4.0",
-    "rxfire": "^6.0.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.9",
     "@angular/cli": "~13.3.9",
     "@angular/compiler-cli": "~13.3.11",
+    "@nrwl/nx-cloud": "14.0.0",
+    "@nrwl/workspace": "14.1.10",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
@@ -48,6 +52,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "nx": "14.1.10",
     "typescript": "~4.5.5"
   }
 }
